--- a/src/pages/detaillaporan/detaillaporan.html
+++ b/src/pages/detaillaporan/detaillaporan.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>detaillaporan</ion-title>
+    <ion-title>detaillaporan2</ion-title>
   </ion-navbar>
 
 </ion-header>
